--- a/formulario.html
+++ b/formulario.html
@@ -6,6 +6,15 @@
     <title>FORMULARIO</title>
 </head>
 <body>
-    
+    <header>
+        <h1>FORMULARIO DEL CLIENTE</h1>
+    </header>
+    <main>
+        <section>
+            <form action="">
+                
+            </form>
+        </section>
+    </main>
 </body>
 </html>
