--- a/login.html
+++ b/login.html
@@ -12,7 +12,7 @@
     </header>
     <main>
         <section>
-            <form action="formulario.html" method="post">
+            <form id="login">
                 <label for="email">Correo Electrónico:</label>
                 <input type="email" id="email" name="email" required>
 
@@ -23,5 +23,7 @@
             </form>
         </section>
     </main>
+
+    <script src="Js/login.js"></script>
 </body>
 </html>
