--- a/formulario.html
+++ b/formulario.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>FORMULARIO</title>
+    <link rel="stylesheet" href="Css/formulario.css">
 </head>
 <body>
     <header>
@@ -11,7 +12,7 @@
     </header>
     <main>
         <section>
-            <form action="">
+            <form id="formulario" method="post">
                 
             </form>
         </section>
