--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login</title>
+    <title>LOGIN</title>
     <link rel="stylesheet" href="Css/login.css">
 </head>
 <body>
@@ -12,7 +12,7 @@
     </header>
     <main>
         <section>
-            <form id="login" method="post">
+            <form id="loginForm" method="post">
                 <label for="email">Correo Electrónico:</label>
                 <input type="email" id="email" name="email" required>
                 
@@ -20,7 +20,9 @@
                 <input type="password" id="password" name="password" required>
                 
                 <button type="submit">Iniciar Sesión</button>
+                <p id="error-message" style="color: red; display: none;"></p>
             </form>
+            <p class="register-link">¿No tienes cuenta? <a href="RegistroUsuario.html">Regístrate aquí</a></p>
         </section>
     </main>
     <script src="Js/login.js"></script>
